--- a/assets/scss/_widgets.scss
+++ b/assets/scss/_widgets.scss
@@ -5,6 +5,7 @@
 .widget {
 	position: relative;
 	margin-bottom: 40px; // postmessage: sidebar_widgets_gap, footer_widgets_bar_widgets_gap
+	overflow: hidden; // for border-radius
 
 	.sidebar &:last-child {
 		margin-bottom: 0;
